-Added empty components with simple routing -Finished first form with proper validation -Organized style sheets

--- a/angular.json
+++ b/angular.json
@@ -30,8 +30,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss",
-              "src/styles/m3-theme.scss"
+              "src/styles.scss"
             ],
             "scripts": []
           },
@@ -91,8 +90,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss",
-              "src/styles/m3-theme.scss"
+              "src/styles.scss"
             ],
             "scripts": []
           }
